; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/fslib/btrfslib/extr_btrfslib.c_set_default_subvol.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/fslib/btrfslib/extr_btrfslib.c_set_default_subvol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_10__ = type { i32, i32 }
%struct.TYPE_8__ = type { i32, i32 }

@set_default_subvol.default_subvol = internal constant [8 x i8] c"default\00", align 1
@set_default_subvol.default_hash = internal constant i32 -1916812590, align 4
@BTRFS_ROOT_FSTREE = common dso_local global i32 0, align 4
@BTRFS_ROOT_TREEDIR = common dso_local global i32 0, align 4
@TYPE_INODE_ITEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"..\00", align 1
@TYPE_ROOT_ITEM = common dso_local global i32 0, align 4
@BTRFS_TYPE_DIRECTORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @set_default_subvol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_default_subvol(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_9__, align 4
  %6 = alloca %struct.TYPE_10__, align 4
  %7 = alloca %struct.TYPE_8__, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @BTRFS_ROOT_FSTREE, align 4
  %10 = load i32, i32* @BTRFS_ROOT_TREEDIR, align 4
  %11 = call i32 @add_inode_ref(i32* %8, i32 %9, i32 %10, i32 0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @set_default_subvol.default_subvol, i64 0, i64 0))
  %12 = call i32 @memset(%struct.TYPE_9__* %5, i32 0, i32 32)
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  store i32 1, i32* %13, align 4
  %14 = load i32, i32* %4, align 4
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 1
  store i32 %14, i32* %15, align 4
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 2
  store i32 1, i32* %16, align 4
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 3
  store i32 16877, i32* %17, align 4
  %18 = call i32 @GetSystemTimeAsFileTime(%struct.TYPE_10__* %6)
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 1
  store i32 %20, i32* %21, align 4
  %22 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  store i32 %23, i32* %24, align 4
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 4
  %26 = bitcast %struct.TYPE_8__* %7 to i64*
  %27 = load i64, i64* %26, align 4
  %28 = call i32 @win_time_to_unix(i64 %27, i32* %25)
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 4
  %30 = load i32, i32* %29, align 4
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 5
  store i32 %30, i32* %31, align 4
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 6
  store i32 %30, i32* %32, align 4
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 7
  store i32 %30, i32* %33, align 4
  %34 = load i32*, i32** %3, align 8
  %35 = load i32, i32* @BTRFS_ROOT_TREEDIR, align 4
  %36 = load i32, i32* @TYPE_INODE_ITEM, align 4
  %37 = call i32 @add_item(i32* %34, i32 %35, i32 %36, i32 0, %struct.TYPE_9__* %5, i32 32)
  %38 = load i32*, i32** %3, align 8
  %39 = load i32, i32* @BTRFS_ROOT_TREEDIR, align 4
  %40 = load i32, i32* @BTRFS_ROOT_TREEDIR, align 4
  %41 = call i32 @add_inode_ref(i32* %38, i32 %39, i32 %40, i32 0, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %42 = load i32*, i32** %3, align 8
  %43 = load i32, i32* @BTRFS_ROOT_TREEDIR, align 4
  %44 = load i32, i32* @BTRFS_ROOT_FSTREE, align 4
  %45 = load i32, i32* @TYPE_ROOT_ITEM, align 4
  %46 = load i32, i32* @BTRFS_TYPE_DIRECTORY, align 4
  %47 = call i32 @add_dir_item(i32* %42, i32 %43, i32 -1916812590, i32 %44, i32 %45, i32 -1, i32 0, i32 %46, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @set_default_subvol.default_subvol, i64 0, i64 0))
  ret void
}

declare dso_local i32 @add_inode_ref(i32*, i32, i32, i32, i8*) #1

declare dso_local i32 @memset(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @GetSystemTimeAsFileTime(%struct.TYPE_10__*) #1

declare dso_local i32 @win_time_to_unix(i64, i32*) #1

declare dso_local i32 @add_item(i32*, i32, i32, i32, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @add_dir_item(i32*, i32, i32, i32, i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
